force-app/main/default/objects/SLCM_Employee_Rent_Detail__c/SLCM_Employee_Rent_Detail__c.object-meta.xml
<CustomObject>
    <label>SLCM Employee Rent Detail</label>
    <nameField>
        <displayFormat>MD -{0000}</displayFormat>
        <label>SLCM HCM  Monthly Deduction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLCM Employee Rent Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>