force-app/main/default/objects/SLCM_Employee_Rent_Detail__c/fields/Monthly_Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Deduction_Amount__c</fullName>
    <label>Monthly Deduction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>