force-app/main/default/objects/SLCM_Employee_Rent_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Room_Type__c</columns>
    <columns>Monthly_Deduction_Amount__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>